# QuantRL-Lab

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release.sh
.github/workflows/: cd.yaml  ci.yaml
notebooks/: alpaca_example.ipynb  alpha_vantage.ipynb  backtesting_example.ipynb  configurable_data_sources.ipynb  data_processing.ipynb  data_source_and_processing.ipynb  feature_selection.ipynb  llm_hedge_screener.ipynb  optuna_db.ipynb  optuna_tuning.ipynb  test_custom_env.ipynb
notebooks/data_sources/: alpaca_example.ipynb  alpha_vantage.ipynb
src/quantrl_lab/backtesting/: __init__.py  analysis.py  evaluation.py  runner.py  training.py
src/quantrl_lab/backtesting/config/: __init__.py  algorithm_config.py  config_registry.py  reward_config.py  reward_presets.py
src/quantrl_lab/custom_envs/core/: __init__.py  actions.py  config.py  portfolio.py  trading_env.py
src/quantrl_lab/custom_envs/factories/: stock_env_factory.py
src/quantrl_lab/custom_envs/stock/: __init__.py  env_config.py  env_single_stock.py  stock_config.py  stock_portfolio.py
src/quantrl_lab/data/: __init__.py  data_processor.py  data_source_registry.py  interface.py
src/quantrl_lab/data/indicators/: indicator_registry.py  technical_indicators.py
src/quantrl_lab/feature_selection/: __init__.py  base_vectorized_strategy.py  indicator_analysis.py  vectorized_strategy_factory.py  vectorized_strategy_implementations.py
src/quantrl_lab/screener/: data_models.py  llm_hedge_screener.py  prompt.py  response_schemas.py
src/quantrl_lab/trading/: alpaca_trader.py
src/quantrl_lab/tuning/: mlflow_runner.py  optuna_runner.py
src/quantrl_lab/utils/: __init__.py  common.py  config.py
tests/: conftest.py  test_action.py  test_env.py  test_portfolio.py  test_reward.py
(+32 files in other folders)
